# coffeeshop

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/domain/: CMakeLists.txt  bean_hopper.cppm  coffee_beans.cppm  coffee_grinder.cppm  drinks.cppm  electric_coffee_grinder.cppm  electric_steamer.cppm  espresso_machine.cppm  liquid.cppm  manual_coffee_grinder.cppm  steam_wand.cppm  steamer.cppm
tests/domain/: CMakeLists.txt  bean_hopper_tests.cpp  coffee_beans_tests.cpp  coffee_grinder_tests.cpp  drinks_tests.cpp  electric_coffee_grinder_tests.cpp  electric_steamer_tests.cpp  espresso_machine_tests.cpp  liquid_tests.cpp  manual_coffee_grinder_tests.cpp  mock_coffee_grinder.cppm  mock_steamer.cppm  steam_wand_tests.cpp
